--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <div class="header">
+        <div class="header-logo">
+            <div class="text">Header Logo</div>
+        </div>
+        <ul class="links">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </div>
+        
+        <div class="left-links"></div>
 </head>
 <body>
     
