--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <div class="header">
         <div class="header-logo">
             <div class="text">Header Logo</div>
@@ -15,10 +17,26 @@
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
         </div>
-        
-        <div class="left-links"></div>
-</head>
-<body>
-    
+        <div class="header-bold">This website is awesome</div>
+          <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+          <button>Sign up</button>
+        <div class="image-placeholder"></div>
+    <div class="content"></div>
+      <div class="informaton">Some random information.</div>
+        <div class="image"></div>
+        <div class="text">this is some subtext under an illustration or image</div>
+        <div class="image">this is some subtext under an illustration or image</div>
+        <div class="image">this is some subtext under an illustration or image</div>
+        <div class="image">this is some subtext under an illustration or image</div>
+      <div class="quote">
+        <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="author">-Thor, God of Thunder</div>
+      </div>
+      <div class="call">
+        <div class="call-header">Call to action! It's time!</div>
+        <div class="call-text">Sign up for our product by clicking that button right over there!</div>
+        <button>Sign up</button>
+      </div>
+    <div class="footer">Copyright @ The Odin Project 2021</div>
 </body>
 </html>
