--- a/index.html
+++ b/index.html
@@ -1,68 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="header">
-        <div class="header-one">
-            <div class="header-logo">Header Logo</div>
-            <ul class="links">
-              <li><a href="#">header link one</a></li>
-              <li><a href="#">header link two</a></li>
-              <li><a href="#">header link three</a></li>
-            </ul>
+      <div class="header-one">
+        <div class="header-logo">Header Logo</div>
+        <ul class="links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
+      <div class="header-two">
+        <div class="description">
+          <div class="header-bold">This website is awesome</div>
+          <div class="header-text">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </div>
+          <button class="button1">Sign up</button>
         </div>
-        <div class="header-two">
-            <div class="description">
-                <div class="header-bold">This website is awesome</div>
-                <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button class="button1">Sign up</button>
-            </div>
-            <div class="img">
-              <div class="placeholder">this is a placeholder for an image</div>
-            </div>
+        <div class="img">
+          <div class="placeholder">this is a placeholder for an image</div>
         </div>
+      </div>
     </div>
-        
+
     <div class="content">
       <div class="info">Some random information.</div>
       <div class="container">
         <div class="pic">
-            <div class="image"></div>
-            <div class="image-text">this is some subtext under an illustration or image</div>
+          <div class="image"></div>
+          <div class="image-text">
+            this is some subtext under an illustration or image
+          </div>
         </div>
         <div class="pic">
-            <div class="image"></div>
-            <div class="image-text">this is some subtext under an illustration or image</div>
+          <div class="image"></div>
+          <div class="image-text">
+            this is some subtext under an illustration or image
+          </div>
         </div>
         <div class="pic">
-            <div class="image"></div>
-            <div class="image-text">this is some subtext under an illustration or image</div>
+          <div class="image"></div>
+          <div class="image-text">
+            this is some subtext under an illustration or image
+          </div>
         </div>
         <div class="pic">
-            <div class="image"></div>
-            <div class="image-text">this is some subtext under an illustration or image</div>
+          <div class="image"></div>
+          <div class="image-text">
+            this is some subtext under an illustration or image
+          </div>
         </div>
-       </div>
+      </div>
       <div class="quote-section">
-        <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quote-text">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </div>
         <div class="quote-author">-Thor, God of Thunder</div>
       </div>
       <div class="call">
         <div class="action">
-            <div class="call-header">Call to action! It's time!</div>
-            <div class="call-text">Sign up for our product by clicking that button right over there!</div>
-        </div> 
+          <div class="call-header">Call to action! It's time!</div>
+          <div class="call-text">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
         <button class="button2">Sign up</button>
       </div>
     </div>
-    
+
     <div class="footer">Copyright © The Odin Project 2021</div>
-</body>
+  </body>
 </html>
