--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-one">
+      <div class="header-top">
         <div class="header-logo">Header Logo</div>
         <ul class="links">
           <li><a href="#">header link one</a></li>
@@ -17,7 +17,7 @@
           <li><a href="#">header link three</a></li>
         </ul>
       </div>
-      <div class="header-two">
+      <div class="header-bottom">
         <div class="description">
           <div class="header-bold">This website is awesome</div>
           <div class="header-text">
@@ -61,12 +61,14 @@
         </div>
       </div>
       <div class="quote-section">
-        <div class="quote-text">
-          This is an inspiring quote, or a testimonial from a customer. Maybe
-          it's just filling up space, or maybe people will actually read it. Who
-          knows? All I know is that it looks nice.
+        <div class="quote">
+          <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </div>
+          <div class="quote-author">-Thor, God of Thunder</div>
         </div>
-        <div class="quote-author">-Thor, God of Thunder</div>
       </div>
       <div class="call">
         <div class="action">
