--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
           </div>
           <button class="button1">Sign up</button>
         </div>
-        <div class="img">
-          <div class="placeholder">this is a placeholder for an image</div>
-        </div>
+        <img src = images/placeholder.png alt = "placeholder for an image" class
+        = "placeholder">
       </div>
     </div>
 
@@ -36,25 +35,25 @@
       <div class="info">Some random information.</div>
       <div class="container">
         <div class="pic">
-          <div class="image"></div>
+          <img src="images/image1.png" class="image" />
           <div class="image-text">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="pic">
-          <div class="image"></div>
+          <img src="images/image2.png" class="image" />
           <div class="image-text">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="pic">
-          <div class="image"></div>
+          <img src="images/image3.png" class="image" />
           <div class="image-text">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="pic">
-          <div class="image"></div>
+          <img src="images/image4.png" class="image" />
           <div class="image-text">
             this is some subtext under an illustration or image
           </div>
